# pinescript-vsc-server-rust

./: .gitignore  Cargo.toml  README.md  subtle_logic_error.pine  subtle_logic_error_suite.pine
.claude/: settings.local.json
crates/tree-sitter-pine-rs/: Cargo.toml  grammar.js
crates/tree-sitter-pine-rs/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-pine-rs/queries/: folds.scm  highlights.scm  locals.scm  tags.scm
crates/tree-sitter-pine-rs/src/: grammar.json  node-types.json  parser.c
src/: builtins.rs  document.rs  main.rs  text.rs  types.rs
src/analysis/: infer.rs  mod.rs  symbols.rs  utils.rs  walk.rs
src/analysis/checks/: collections.rs  core.rs  draw.rs  helpers.rs  input.rs  math.rs  mod.rs  plot.rs  request.rs  strategy.rs  ta.rs  time.rs  validation.rs
src/builtins/: values.rs
src/builtins/functions/: chart.rs  color.rs  compat.rs  core.rs  input.rs  map.rs  math.rs  mod.rs  request.rs  runtime.rs  string.rs  ta.rs  timeframe.rs
src/builtins/functions/array/: constructors.rs  core.rs  mod.rs  mutation.rs  ordering.rs  search.rs  slice.rs  stats.rs
src/builtins/functions/draw/: box_getters.rs  box_setters.rs  core.rs  label_getters.rs  label_setters.rs  line_getters.rs  line_setters.rs  linefill.rs  mod.rs  polyline.rs  table.rs
src/builtins/functions/matrix/: access.rs  create.rs  inspect.rs  mod.rs  row_column.rs  transform.rs
src/builtins/functions/strategy/: closed_trades.rs  mod.rs  open_trades.rs  trading.rs
src/lsp/: server.rs
vscode/: .vscodeignore  extension.js  package-lock.json  package.json
