[package]
name = "pinescript-vsc-server-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20.0"
tree-sitter = "0.26.3"
tree-sitter-pine = { path = "crates/tree-sitter-pine-rs" }
