[package]
name = "tree-sitter-pine"
description = "Pine grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "pine"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/zelosleone/pinescript-vsc-server-rust"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.26.3"

[build-dependencies]
cc = "1.2.53"
